--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub backwards-rat-race Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/backwards-rat-race/track-db</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
